@@ -221,6 +221,12 @@ public class ScanTable {
         chart.updateDatasetsByNames(datasetNames);
     }
 
+    public void ensureDatasetAttributes() {
+        if (getItems().stream().filter(item -> item.getDatasetAttributes() == null).findAny().isPresent()) {
+            setDatasetAttributes();
+        }
+    }
+
     private void setDatasetAttributes() {
         PolyChart chart = scannerTool.getChart();
         List<DatasetAttributes> datasetAttributesList = chart.getDatasetAttributes();
@@ -241,7 +247,7 @@ public class ScanTable {
     }
 
     boolean arrayed(DatasetAttributes datasetAttributes) {
-        Dataset dataset = (Dataset) datasetAttributes.getDataset();
+        Dataset dataset = datasetAttributes.getDataset();
         int nFreqDim = dataset.getNFreqDims();
         int nDim = dataset.getNDim();
         return (nFreqDim != 0) && (nFreqDim < nDim);
@@ -259,7 +265,7 @@ public class ScanTable {
         datasetAttributesList.forEach(d -> d.setPos(false));
         boolean singleData = datasetAttributesList.size() == 1;
         if (singleData) {
-            DatasetAttributes dataAttr = datasetAttributesList.get(0);
+            DatasetAttributes dataAttr = datasetAttributesList.getFirst();
             if (arrayed(dataAttr)) {
                 dataAttr.setMapColor(0, dataAttr.getMapColor(0)); // ensure colorMap is not empty
             } else {
@@ -288,7 +294,7 @@ public class ScanTable {
         );
 
         if (singleData) {
-            DatasetAttributes dataAttr = datasetAttributesList.get(0);
+            DatasetAttributes dataAttr = datasetAttributesList.getFirst();
             int nDim = dataAttr.nDim;
             chart.full(nDim - 1);
             if ((nDim - dataAttr.getDataset().getNFreqDims()) == 1) {
@@ -384,7 +390,7 @@ public class ScanTable {
             success = true;
 
             // Only get the first file from the list
-            final File file = db.getFiles().get(0);
+            final File file = db.getFiles().getFirst();
             if (file.isDirectory()) {
                 scanDir = file;
                 Platform.runLater(() -> {
@@ -406,7 +412,7 @@ public class ScanTable {
 
         List<File> files = db.getFiles();
         if (db.hasFiles()) {
-            if (!files.isEmpty() && (files.get(0).isDirectory() || files.get(0).toString().endsWith(".txt"))) {
+            if (!files.isEmpty() && (files.getFirst().isDirectory() || files.getFirst().toString().endsWith(".txt"))) {
                 tableView.setStyle("-fx-border-color: green;"
                         + "-fx-border-width: 1;");
                 e.acceptTransferModes(TransferMode.COPY);
@@ -490,12 +496,17 @@ public class ScanTable {
             String initScript = ChartProcessor.buildInitScript();
             processInterp.exec(initScript);
 
-            int nDim = fileTableItems.get(0).getNDim();
+            int nDim = fileTableItems.getFirst().getNDim();
             String processScript = chartProcessor.buildScript(nDim);
             Processor processor = Processor.getProcessor();
             processor.keepDatasetOpen(false);
 
             int rowNum = 1;
+            for (FileTableItem fileTableItem : fileTableItems) {
+                fileTableItem.setDatasetName(null);
+                fileTableItem.setDatasetAttributes(null);
+            }
+            activeDatasetAttributes.clear();
             for (FileTableItem fileTableItem : fileTableItems) {
                 File fidFile = new File(scanDir, fileTableItem.getFileName());
                 String fidFilePath = fidFile.getAbsolutePath();
@@ -563,7 +574,7 @@ public class ScanTable {
     }
 
     public void combineDatasets() {
-        List<Dataset> datasets = getDatasetAttributesList().stream().map(dAttr -> (Dataset) dAttr.getDataset()).toList();
+        List<Dataset> datasets = getDatasetAttributesList().stream().map(DatasetAttributes::getDataset).toList();
         if (currentChart.getDatasetAttributes().size() < 2) {
             GUIUtils.warn("Combine", "Need more than one dataset to combine");
         } else {
@@ -657,7 +668,7 @@ public class ScanTable {
         tableView.getItems().removeListener(filterItemListener);
         fileListItems.clear();
         for (var datasetAttributes : datasetAttributesList) {
-            Dataset dataset = (Dataset) datasetAttributes.getDataset();
+            Dataset dataset = datasetAttributes.getDataset();
             long eTime = 0;
             FileTableItem fileTableItem = new FileTableItem(dataset.getName(), "", dataset.getNDim(),
                     eTime, iRow + 1, dataset.getName(), fieldMap);
@@ -866,47 +877,7 @@ public class ScanTable {
             } catch (IOException ioE) {
                 log.warn(ioE.getMessage(), ioE);
             }
-            for (int i = 0; i < headers.length; i++) {
-                if (!notInteger[i]) {
-                    columnTypes.put(headers[i], "I");
-                } else if (!notDouble[i]) {
-                    columnTypes.put(headers[i], "D");
-                } else {
-                    columnTypes.put(headers[i], "S");
-                }
-            }
-            columnTypes.put(PATH_COLUMN_NAME, "S");
-            columnTypes.put(SEQUENCE_COLUMN_NAME, "S");
-            columnTypes.put(NDIM_COLUMN_NAME, "I");
-            columnTypes.put(ROW_COLUMN_NAME, "I");
-            columnTypes.put(DATASET_COLUMN_NAME, "S");
-            columnTypes.put(ETIME_COLUMN_NAME, "I");
-
-            for (FileTableItem item : fileListItems) {
-                item.setDate(item.getDate() - firstDate);
-                item.setTypes(headers, notDouble, notInteger);
-            }
-            initTable();
-            addHeaders(headers);
-            fileTableFilter.resetFilter();
-            if (!firstDatasetName.isEmpty()) {
-                File parentDir = file.getParentFile();
-                Path path = FileSystems.getDefault().getPath(parentDir.toString(), firstDatasetName);
-                if (path.toFile().exists()) {
-                    Dataset firstDataset = AnalystApp.getFXMLControllerManager().getOrCreateActiveController().openDataset(path.toFile(), false, true);
-                    // If there is only one unique dataset name, assume an arrayed experiment
-                    List<String> uniqueDatasetNames = fileListItems.stream().map(FileTableItem::getDatasetName).distinct().toList();
-                    if (uniqueDatasetNames.size() == 1 && uniqueDatasetNames.get(0) != null && !uniqueDatasetNames.get(0).isEmpty()) {
-                        firstDataset.setNFreqDims(firstDataset.getNDim() - 1);
-                    }
-                    PolyChart chart = scannerTool.getChart();
-                    List<Integer> rows = new ArrayList<>();
-                    rows.add(0);
-                    chart.setDrawlist(rows);
-                    chart.full();
-                    chart.autoScale();
-                }
-            }
+            processColumns(file, headers, notInteger, notDouble, firstDate, firstDatasetName);
             addGroupColumn();
             scannerTool.miner.setDisableSubMenus(!combineFileMode);
 
@@ -914,6 +885,51 @@ public class ScanTable {
             log.warn(e.getMessage(), e);
         } finally {
             processingTable = false;
+        }
+    }
+
+    private void processColumns(File file, String[] headers, boolean[] notInteger, boolean[] notDouble, long firstDate, String firstDatasetName) {
+        for (int i = 0; i < headers.length; i++) {
+            if (!notInteger[i]) {
+                columnTypes.put(headers[i], "I");
+            } else if (!notDouble[i]) {
+                columnTypes.put(headers[i], "D");
+            } else {
+                columnTypes.put(headers[i], "S");
+            }
+        }
+        columnTypes.put(PATH_COLUMN_NAME, "S");
+        columnTypes.put(SEQUENCE_COLUMN_NAME, "S");
+        columnTypes.put(NDIM_COLUMN_NAME, "I");
+        columnTypes.put(ROW_COLUMN_NAME, "I");
+        columnTypes.put(DATASET_COLUMN_NAME, "S");
+        columnTypes.put(ETIME_COLUMN_NAME, "I");
+
+        for (FileTableItem item : fileListItems) {
+            item.setDate(item.getDate() - firstDate);
+            item.setTypes(headers, notDouble, notInteger);
+        }
+        initTable();
+        addHeaders(headers);
+
+        fileTableFilter.resetFilter();
+        if (!firstDatasetName.isEmpty()) {
+            File parentDir = file.getParentFile();
+            Path path = FileSystems.getDefault().getPath(parentDir.toString(), firstDatasetName);
+            if (path.toFile().exists()) {
+                Dataset firstDataset = AnalystApp.getFXMLControllerManager().getOrCreateActiveController().openDataset(path.toFile(), false, true);
+                // If there is only one unique dataset name, assume an arrayed experiment
+                List<String> uniqueDatasetNames = fileListItems.stream().map(FileTableItem::getDatasetName).distinct().toList();
+                if (uniqueDatasetNames.size() == 1 && uniqueDatasetNames.getFirst() != null && !uniqueDatasetNames.getFirst().isEmpty()) {
+                    firstDataset.setNFreqDims(firstDataset.getNDim() - 1);
+                }
+                PolyChart chart = scannerTool.getChart();
+                List<Integer> rows = new ArrayList<>();
+                rows.add(0);
+                chart.setDrawlist(rows);
+                chart.full();
+                chart.autoScale();
+            }
         }
     }
 
@@ -1025,7 +1041,13 @@ public class ScanTable {
     public void addTableColumn(String newName, String type) {
         if (headerAbsent(newName)) {
             columnTypes.put(newName, type);
-            addColumn(newName);
+            TableColumn column = createColumn(newName);
+            if (column != null) {
+                tableView.getColumns().add(column);
+                setColumnGraphic(column);
+                column.graphicProperty().addListener(e -> graphicChanged(column));
+                updateFilter();
+            }
         }
     }
 
@@ -1093,7 +1115,6 @@ public class ScanTable {
         TableColumn<FileTableItem, Color> posColorCol = makeColorColumns(scannerTool, true);
         TableColumn<FileTableItem, Color> negColorCol = makeColorColumns(scannerTool, false);
 
-      //  TableColumn<FileTableItem, Boolean> posDrawOnCol = makePosDrawColumn(scannerTool, true);
         TableColumn<FileTableItem, Boolean> negDrawOnCol = makePosDrawColumn(scannerTool, false);
 
 
@@ -1300,15 +1321,26 @@ public class ScanTable {
 
     private void addHeaders(String[] headers) {
         var missingHeaders = headersMissing(headers);
+        List<TableColumn<FileTableItem, ?>> columns = new ArrayList<>();
         for (var header : missingHeaders) {
-            addColumn(header);
+            TableColumn<FileTableItem, ?> column = createColumn(header);
+            if (column != null) {
+                columns.add(column);
+            }
         }
+        tableView.getColumns().addAll(columns);
+
+        for (TableColumn column : columns) {
+            setColumnGraphic(column);
+            column.graphicProperty().addListener(e -> graphicChanged(column));
+        }
+        updateFilter();
     }
 
-    private void addColumn(String header) {
+    private TableColumn<FileTableItem, ?> createColumn(String header) {
+        final TableColumn<FileTableItem, ?> newColumn;
         if (headerAbsent(header)) {
             String type = columnTypes.get(header);
-            final TableColumn<FileTableItem, ?> newColumn;
             if (type == null) {
                 type = "S";
                 log.info("No type for {}", header);
@@ -1330,26 +1362,23 @@ public class ScanTable {
                             }
                         }
                     });
-                    tableView.getColumns().add(doubleExtraColumn);
                     break;
                 case "I":
                     TableColumn<FileTableItem, Number> intExtraColumn = new TableColumn<>(header);
                     newColumn = intExtraColumn;
                     intExtraColumn.setCellValueFactory(e -> new SimpleIntegerProperty(e.getValue().getIntegerExtra(header)));
-                    tableView.getColumns().add(intExtraColumn);
                     break;
                 default:
                     TableColumn<FileTableItem, String> extraColumn = new TableColumn<>(header);
                     newColumn = extraColumn;
                     extraColumn.setCellValueFactory(e -> new SimpleStringProperty(String.valueOf(e.getValue().getExtra(header))));
-                    tableView.getColumns().add(extraColumn);
                     break;
             }
 
-            updateFilter();
-            setColumnGraphic(newColumn);
-            newColumn.graphicProperty().addListener(e -> graphicChanged(newColumn));
+        } else {
+            newColumn = null;
         }
+        return newColumn;
     }
 
     private void graphicChanged(TableColumn<FileTableItem, ?> column) {
@@ -1372,11 +1401,16 @@ public class ScanTable {
         return colorMenu;
     }
 
+    public int getSelectedIndex() {
+        int index = tableView.getSelectionModel().getSelectedIndex();
+        return index == -1 ? 0 : index;
+    }
+
     private void unifyColors(boolean posColorMode) {
         if (!getItems().isEmpty()) {
             var selectedItem = tableView.getSelectionModel().getSelectedItem();
             if (selectedItem == null) {
-                selectedItem = getItems().get(0);
+                selectedItem = getItems().getFirst();
             }
             TableColors.unifyColor(getItems(), selectedItem.getColor(posColorMode), (item, color) -> item.setColor(color, posColorMode));
             scannerTool.getChart().refresh();
@@ -1387,7 +1421,7 @@ public class ScanTable {
     private void interpolateColors(boolean posColorMode) {
         int size = getItems().size();
         if (size > 1) {
-            Color color1 = getItems().get(0).getColor(posColorMode);
+            Color color1 = getItems().getFirst().getColor(posColorMode);
             Color color2 = getItems().get(size - 1).getColor(posColorMode);
             TableColors.interpolateColors(getItems(), color1, color2,
                     (item, color) -> item.setColor(color, posColorMode));
@@ -1626,7 +1660,7 @@ public class ScanTable {
         if (!datasetAttributesList.isEmpty()) {
             FileTableItem item0 = tableView.getSelectionModel().getSelectedItem();
             if (item0 == null) {
-                item0 = getItems().get(0);
+                item0 = getItems().getFirst();
             }
             if (item0 != null) {
                 dataAttr0 = item0.getDatasetAttributes();
@@ -1666,7 +1700,7 @@ public class ScanTable {
         Double value = null;
         List<DatasetAttributes> datasetAttributesList = getSelectedDatasetAttributesList();
         if (!datasetAttributesList.isEmpty()) {
-            value = attrColumn.getValue(datasetAttributesList.get(0)).doubleValue();
+            value = attrColumn.getValue(datasetAttributesList.getFirst()).doubleValue();
         }
         return value;
     }
@@ -1803,7 +1837,7 @@ public class ScanTable {
                 datasetAttributes.setOffset(value.doubleValue());
             }
         },
-        CLM(OFFSET_COLUMN_NAME, "Contour Level Multiplier") {
+        CLM(CLM_COLUMN_NAME, "Contour Level Multiplier") {
             GUIUtils.SliderRange getSliderRange(double value) {
                 return new GUIUtils.SliderRange(1.01, value, 4.0, 0.01);
             }
